@@ -21,21 +21,36 @@ Event-Related Interfaces
 Other Interfaces
 ++++++++++++++++
 
+  .. autointerface:: IAuthenticationPolicy
+     :members:
+
+  .. autointerface:: IAuthorizationPolicy
+     :members:
+
   .. autointerface:: IExceptionResponse
+     :members:
 
   .. autointerface:: IRoute
+     :members:
 
   .. autointerface:: IRoutePregenerator
+     :members:
 
   .. autointerface:: ISession
+     :members:
 
   .. autointerface:: ISessionFactory
+     :members:
 
   .. autointerface:: IRendererInfo
+     :members:
 
   .. autointerface:: ITemplateRenderer
+     :members:
 
   .. autointerface:: IViewMapperFactory
+     :members:
 
   .. autointerface:: IViewMapper
+     :members:
 
